Quiz app 1qus done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Quize about general knowledge</h1>
+    <div>
+        <fieldset>
+            <p>What is 2+15</p>
+            <input name="math-qus" type="radio">16</input><br>
+            <input name="math-qus" type="radio">17</input><br>
+            <input name="math-qus" type="radio">14</input><br>
+            <input name="math-qus" type="radio">18</input><br>
+        </fieldset>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
