--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div>
         <fieldset>
             <p>(1) What is 2+15</p>
-            <input name="math-qus" id="q1-a1" type="radio">16</input><br>
-            <input name="math-qus" id="q1-a2" type="radio">17</input><br>
+            <input name="math-qus" id="q1-a1" type="radio">17</input><br>
+            <input name="math-qus" id="q1-a2" type="radio">19</input><br>
             <input name="math-qus" id="q1-a3" type="radio">14</input><br>
             <input name="math-qus" id="q1-a4" type="radio">18</input><br>
         </fieldset>
@@ -20,22 +20,22 @@
     <div>
         <fieldset>
             <p>(2) What is the Pakistan Capital City Name</p>
-            <input name="capital-city" id="q2-a1" type="radio">Karachi</input><br>
-            <input name="capital-city" id="q2-a1" type="radio">Lahore</input><br>
             <input name="capital-city" id="q2-a1" type="radio">Islamabad</input><br>
-            <input name="capital-city" id="q2-a1" type="radio">Quetta</input><br>
+            <input name="capital-city" id="q2-a2" type="radio">Lahore</input><br>
+            <input name="capital-city" id="q2-a3" type="radio">Karachi</input><br>
+            <input name="capital-city" id="q2-a4" type="radio">Quetta</input><br>
         </fieldset>
     </div>
     <div><br>
         <fieldset>
             <p>(3) What is the name of the fastest car in the world</p>
             <input name="fastest-car" id="q3-a1" type="radio">Ferare</input><br>
-            <input name="fastest-car" id="q3-a1" type="radio">BMW</input><br>
-            <input name="fastest-car" id="q3-a1" type="radio">Bugarty</input><br>
-            <input name="fastest-car" id="q3-a1" type="radio">Lemborgany</input><br>
+            <input name="fastest-car" id="q3-a2" type="radio">BMW</input><br>
+            <input name="fastest-car" id="q3-a3" type="radio">Lemborgany</input><br>
+            <input name="fastest-car" id="q3-a4" type="radio">Bugarty</input><br>
         </fieldset>
     </div>
-    
+    <button onclick="check()">Result</button>
 </body>
 <script src="app.js"></script>
 </html>
